libs/zgpu/src/wgpu.zig


    pub fn setDeviceLostCallback(device: Device, callback: DeviceLostCallback, userdata: ?*anyopaque) void {
        wgpuDeviceSetDeviceLostCallback(device, callback, userdata);
    }
    extern fn wgpuDeviceSetDeviceLostCallback(
        device: Device,
        callback: DeviceLostCallback,
        userdata: ?*anyopaque,
    ) void;

    pub fn setLabel(device: Device, label: ?[*:0]const u8) void {
        wgpuDeviceSetLabel(device, label);
    }
    extern fn wgpuDeviceSetLabel(device: Device, label: ?[*:0]const u8) void;

    pub fn setLoggingCallback(device: Device, callback: LoggingCallback, userdata: ?*anyopaque) void {
        wgpuDeviceSetLoggingCallback(device, callback, userdata);
    }
    extern fn wgpuDeviceSetLoggingCallback(device: Device, callback: LoggingCallback, userdata: ?*anyopaque) void;

    pub fn setUncapturedErrorCallback(device: Device, callback: ErrorCallback, userdata: ?*anyopaque) void {
        wgpuDeviceSetUncapturedErrorCallback(device, callback, userdata);
    }
    extern fn wgpuDeviceSetUncapturedErrorCallback(
        device: Device,
        callback: ErrorCallback,
        userdata: ?*anyopaque,
    ) void;

    pub fn tick(device: Device) void {
        wgpuDeviceTick(device);
    }
    extern fn wgpuDeviceTick(device: Device) void;

    pub fn reference(device: Device) void {
        wgpuDeviceReference(device);
    }
    extern fn wgpuDeviceReference(device: Device) void;

    pub fn release(device: Device) void {
        wgpuDeviceRelease(device);
    }
    extern fn wgpuDeviceRelease(device: Device) void;
};

const ExternalTextureImpl = opaque {
    // TODO: Add functions.
};

const InstanceImpl = opaque {
    pub fn createSurface(instance: Instance, descriptor: SurfaceDescriptor) Surface {
        return wgpuInstanceCreateSurface(instance, &descriptor);
    }
    extern fn wgpuInstanceCreateSurface(instance: Instance, descriptor: *const SurfaceDescriptor) Surface;

    pub fn requestAdapter(
        instance: Instance,
        options: RequestAdapterOptions,
        callback: RequestAdapterCallback,
        userdata: ?*anyopaque,
    ) void {
        wgpuInstanceRequestAdapter(instance, &options, callback, userdata);
    }
    extern fn wgpuInstanceRequestAdapter(
        instance: Instance,
        options: *const RequestAdapterOptions,
        callback: RequestAdapterCallback,
        userdata: ?*anyopaque,
    ) void;

    pub fn reference(instance: Instance) void {
        wgpuInstanceReference(instance);
    }
    extern fn wgpuInstanceReference(instance: Instance) void;

    pub fn release(instance: Instance) void {
        wgpuInstanceRelease(instance);
    }
    extern fn wgpuInstanceRelease(instance: Instance) void;
};

const PipelineLayoutImpl = opaque {
    // TODO: Add functions.
};

const QuerySetImpl = opaque {
    // TODO: Add functions.
};

const QueueImpl = opaque {
    // TODO: Add functions.
};

const RenderBundleImpl = opaque {
    // TODO: Add functions.
};

const RenderBundleEncoderImpl = opaque {
    // TODO: Add functions.
};

const RenderPassEncoderImpl = opaque {
    // TODO: Add functions.
};

const RenderPipelineImpl = opaque {
    // TODO: Add functions.
};

const SamplerImpl = opaque {
    // TODO: Add functions.
};

const ShaderModuleImpl = opaque {
    // TODO: Add functions.
};

const SurfaceImpl = opaque {
    // TODO: Add functions.
};

const SwapChainImpl = opaque {
    // TODO: Add functions.
};

const TextureImpl = opaque {
    // TODO: Add functions.
};

const TextureViewImpl = opaque {
    // TODO: Add functions.
};
